# jo-seating-order

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflows.yml
jo_seating_order/: main.py
poetry_template_project/: main.py
tests/: my_test.py
